[gd_scene load_steps=16 format=3 uid="uid://c7yyrgxayefla"]

[ext_resource type="Script" path="res://scripts/special_orb.gd" id="1_hmrq7"]
[ext_resource type="Texture2D" uid="uid://cfor6f45ij6m0" path="res://assets/textures/star_06.png" id="3_5chod"]
[ext_resource type="Shader" uid="uid://6e7nm3qmc3go" path="res://shaders/simple_shader.tres" id="4_pqsxu"]
[ext_resource type="Texture2D" uid="uid://bam7nu32ov4c8" path="res://scenes/gold orb/soft circle.PNG" id="5_0f3hf"]
[ext_resource type="Texture2D" uid="uid://qmx1pi0utiv8" path="res://assets/prototype-circle.png" id="6_6t35e"]
[ext_resource type="Texture2D" uid="uid://c18e5hucsnpll" path="res://assets/environment/ring.png" id="7_nv72w"]
[ext_resource type="Texture2D" uid="uid://bfowaktqthtdm" path="res://assets/environment/question_mark.png" id="7_ygm0e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m65yg"]
shader = ExtResource("4_pqsxu")
shader_parameter/Hit_Texture = ExtResource("3_5chod")

[sub_resource type="Curve" id="Curve_utcoc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vih7v"]
curve = SubResource("Curve_utcoc")

[sub_resource type="Curve" id="Curve_qfx6u"]
_data = [Vector2(0.00666666, 0.604396), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_rocmr"]
curve = SubResource("Curve_qfx6u")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_chujx"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
spread = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 0.7
scale_max = 0.9
scale_curve = SubResource("CurveTexture_rocmr")
alpha_curve = SubResource("CurveTexture_vih7v")
hue_variation_min = -1.0
hue_variation_max = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_akh6t"]
shader = ExtResource("4_pqsxu")
shader_parameter/Hit_Texture = ExtResource("5_0f3hf")

[sub_resource type="CircleShape2D" id="CircleShape2D_4b7r8"]
radius = 22.0227

[node name="Special Orb" type="Area2D" node_paths=PackedStringArray("powerup_sprites") groups=["orb"]]
script = ExtResource("1_hmrq7")
powerup_sprites = [NodePath("Fireball")]

[node name="Glow Effect" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_m65yg")
process_material = SubResource("ParticleProcessMaterial_chujx")
texture = ExtResource("5_0f3hf")

[node name="BG" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.831373)
material = SubResource("ShaderMaterial_akh6t")
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_6t35e")

[node name="LifetimeBar" type="TextureProgressBar" parent="."]
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(128, 128)
max_value = 10.0
step = 0.01
value = 3.0
fill_mode = 4
texture_under = ExtResource("7_nv72w")
texture_progress = ExtResource("7_nv72w")
tint_progress = Color(0, 0, 0, 1)

[node name="Prototype-circle" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.866667, 0.101961, 1)
scale = Vector2(0.31, 0.31)
texture = ExtResource("6_6t35e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_4b7r8")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Fireball" type="Sprite2D" parent="."]
scale = Vector2(0.16, 0.16)
texture = ExtResource("7_ygm0e")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
